--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-owl-carousel": "^2.3.3",
     "react-redux": "^9.1.2",
     "react-toastify": "^8.1.0",
+    "recharts": "^2.15.4",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "webpack": "^5.96.1"
